# browser_agent_frontend

./: index.html  package.json  test.html
Algoflow_python_agent/: Dockerfile  agent.py  ai_clients.py  browser_tools.py  pyproject.toml  requirements.txt  test_selenium.py  test_tools.py
api/: start-agent.js  token.js
browser_agent_frontend/: index.html  package-lock.json  token_server.js
browser_agent_frontend/api/: token.js
